<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/grp_1"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_all_inbox"
            android:icon="@drawable/ic_profile"
            android:title="@string/perfil" />
    </group>

    <group
        android:id="@+id/grp_2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inbox"
            android:icon="@drawable/ic_inbox"
            android:title="@string/my_jobs"
             />

        <item
            android:id="@+id/nav_priority_inbox"
            android:icon="@drawable/ic_label"
            android:title="@string/historico"
             />

    </group>


    <group
        android:id="@+id/grp_5"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_social"
            android:icon="@drawable/ic_peoples"
            android:title="@string/feedback"
           />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_trash"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />

    </group>

</menu>
