<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rla_profile"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appbar">


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true">


            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout11"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/image_perfi"
                    android:layout_width="112dp"
                    android:layout_height="86dp"
                    app:srcCompat="@drawable/pacount" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout11"
                android:layout_width="365dp"
                android:layout_height="275dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <EditText
                    android:id="@+id/firstname_proff"
                    style="@style/LoginSignUp5Input"
                    android:hint="@string/first_name" />

                <EditText
                    android:id="@+id/lastname_proff"
                    style="@style/LoginSignUp5Input"
                    android:hint="@string/last_name" />

                <EditText
                    android:id="@+id/email_proff"
                    style="@style/LoginSignUp5Input"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/password_proff"
                    style="@style/LoginSignUp5Input"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

                <EditText
                    android:id="@+id/phone_proff"
                    style="@style/LoginSignUp5Input"
                    android:hint="@string/phone"
                    android:inputType="numberDecimal" />

                <EditText
                    style="@style/LoginSignUp5Input"
                    android:hint="@string/itin"
                    android:inputType="numberDecimal" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout9"
                android:layout_width="0dp"
                android:layout_height="38dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout11">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="72dp"
                    android:layout_height="wrap_content"
                    android:text="@string/birthdate"
                    tools:layout_editor_absoluteY="35dp" />

                <TextView
                    android:id="@+id/txt_result"
                    android:layout_width="218dp"
                    android:layout_height="26dp"
                    android:background="@color/grey_10"
                    android:backgroundTint="@color/activity16InputChatBackground"
                    android:gravity="center"
                    android:text="-"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/grey_90"
                    android:textSize="12dp"
                    tools:layout_editor_absoluteY="31dp" />

                <ImageButton
                    android:id="@+id/btn_date"
                    android:layout_width="49dp"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    app:srcCompat="@drawable/ic_calendar"
                    tools:ignore="MissingConstraints,VectorDrawableCompat"
                    tools:layout_editor_absoluteY="31dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout7"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout9">


                <RadioGroup
                    android:id="@+id/radio_proff"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/gender"
                        tools:layout_editor_absoluteX="29dp"
                        tools:layout_editor_absoluteY="173dp" />

                    <RadioButton
                        android:id="@+id/raBtnInterpetre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/male"
                        tools:layout_editor_absoluteX="234dp"
                        tools:layout_editor_absoluteY="164dp" />

                    <RadioButton
                        android:id="@+id/raBtnTraslate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/female"
                        tools:ignore="MissingConstraints"
                        tools:layout_editor_absoluteX="106dp"
                        tools:layout_editor_absoluteY="164dp" />

                </RadioGroup>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout6"
                android:layout_width="0dp"
                android:layout_height="23dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout7">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="62dp"
                    android:layout_height="wrap_content"
                    android:text="@string/company"
                    tools:layout_editor_absoluteX="13dp" />

                <Spinner
                    android:id="@+id/spinner_company"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:layout_editor_absoluteX="85dp"
                    tools:layout_editor_absoluteY="40dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout8"
                android:layout_width="0dp"
                android:layout_height="21dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

            </LinearLayout>

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/primary"
            android:text="@string/update_information"
            android:textColor="@color/icons" />
    </LinearLayout>


</RelativeLayout>