<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/nested_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            android:scrollingCache="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:descendantFocusability="blocksDescendants"
                android:orientation="vertical">

                <include
                    layout="@layout/activity_maps"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <include layout="@layout/toolbar"/>
    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:background="@color/primary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="110dp"
                android:layout_height="51dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtCurrent"
                    android:layout_width="118dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_current"
                    android:gravity="center"
                    android:text="@string/current"
                    android:textColor="@color/secondary_text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:alpha="0.5"
                android:background="@color/grey_60"></LinearLayout>

            <LinearLayout
                android:layout_width="118dp"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtChat"
                    android:layout_width="110dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="4dp"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_chat"
                    android:gravity="center"
                    android:text="@string/chat"
                    android:textColor="@color/secondary_text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:alpha="0.5"
                android:background="@color/grey_60"></LinearLayout>

            <LinearLayout
                android:layout_width="118dp"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtCancel"
                    android:layout_width="110dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="4dp"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_cancel"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textColor="@color/secondary_text" />
            </LinearLayout>
        </LinearLayout>

        <!--
        <android.support.design.widget.TabLayout
            android:id="@+id/tabRequestDetail"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/primary"
            app:tabIndicatorHeight="0dp"
            app:tabMode="fixed" />
            -->

    </android.support.v7.widget.CardView>

</RelativeLayout>
